packages/editors/tree-sitter-mx/test/corpus/attributes.txt
===============
argument-and-params
===============
<${x}(y)/>
<${x}|y|/>
<tag.x(y)/>
<tag.x|y|/>
<tag#x(y)/>
<tag#x|y|/>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (placeholder
        (placeholder_start)
        (placeholder_expr)
        (placeholder_end)))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (placeholder
        (placeholder_start)
        (placeholder_expr)
        (placeholder_end)))
    (params
      (params_open)
      (params_expr
        (param
          (param_pattern)))
      (params_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (shorthand_class
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (shorthand_class
      (tag_name_fragment))
    (params
      (params_open)
      (params_expr
        (param
          (param_pattern)))
      (params_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (shorthand_id
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (shorthand_id
      (tag_name_fragment))
    (params
      (params_open)
      (params_expr
        (param
          (param_pattern)))
      (params_close))
    (open_tag_end_self)
    (element_end)))

===============
argument-attr
===============
<div if(x > y)></div>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
argument-attr-extra-whitespace
===============
<div if (x > y)>
</div>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
argument-attr-ternary
===============
<div if(a ? b : c)></div>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
argument-tag
===============
<for(x in y)></for>
<ab('c')/>
<a('b')/>

---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end_self)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end_self)
    (element_end)))

===============
argument-tag-attr
===============
<for(var i = 0; i < 10; i++) if(x > y)></for>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (attr_name)
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
argument-tag-complex
===============
<for (x in ["Hello ${name}!", "(World)"])></for>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
argument-tag-extra-whitespace
===============
<for (x in y)></for>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (args
      (args_open)
      (args_expr)
      (args_close))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
argument-tag-nested-parens
===============
---
<if(notEmpty(data.colors))>
</if>
---
---------------

(document
  (html_block
    (element
      (open_tag_start)
      (tag_name
        (tag_name_fragment))
      (args
        (args_open)
        (args_expr)
        (args_close))
      (open_tag_end)
      (text)
      (close_tag
        (close_tag_start)
        (close_tag_name)
        (close_tag_end))
      (element_end))))

===============
attr-bound
===============
<a x:=foo>test</a>
<a x := foo>test</a>
<a:=foo>test</a>
<a := foo>test</a>
<a/bar:=foo>test</a>
<a/bar := foo>test</a>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_bound_value
      (attr_bound_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_bound_value
      (attr_bound_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_bound_value
      (attr_bound_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_bound_value
      (attr_bound_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (tag_var
      (tag_var_expr
        (var_pattern)))
    (attr_bound_value
      (attr_bound_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (tag_var
      (tag_var_expr
        (var_pattern)))
    (attr_bound_value
      (attr_bound_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
attr-bound-concise
===============
div foo:=bar
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_bound_value
      (attr_bound_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end)))

===============
attr-comma-multiline
===============
a href="http://www.ebay.com",
  target="_blank",
  bar,
  style="background-color: yellow",
  class="foo"
  -- This is the body of the a tag
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (html_block
      (text))
    (element_end)))

===============
attr-comma-multiline-comment-trailing
===============
div
  ,foo=bar
  // trailing comment

---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (line_comment)
    (element_end)))

===============
attr-comma-multiline-comments
===============
div
  ,foo=bar
  // comment
  ,bar=baz
  /* block */
  ,qux=qux

---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end)))

===============
attr-complex
===============
<a a=123+256 b c= d=(a + (1/2) /* comment */)>test</a>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
attr-complex-functions
===============
tag a = function (x) { console.log("y") } b
tag a = (x) => { console.log("y") } b
tag a = x => { console.log("y") } b
tag a = x => y b
tag a = x => y + 1 b
tag a = x => y = 1 b
tag a = async x => { console.log("y") } b
tag a = async function (x) { console.log("y") } b
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end)))

===============
attr-complex-instanceof
===============
var a = 'foo' instanceof String

tag a = 'foo' instanceof = String
tag a = 'foo' instanceof := String
tag a = 'foo' instanceof= String
tag a = 'foo' instanceof;

tag a = 'foo' instanceof-test;
tag a = 'foo' instanceof_test;

tag a = 'foo' instanceof, b

<tag a = 'foo' instanceof></tag>
<tag a = 'foo' instanceof/>

tag a = 'foo' instanceofthing String

tag a = 'foo' instanceof
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_bound_value
      (attr_bound_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (open_tag_end_self)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end)))

===============
attr-complex-unary
===============
tag a = class b {}

tag a = class {}, b

<tag a = class {}></tag>

<tag a = class {}/>

tag a = classthing b

tag a = testclass b

tag a = test_class b

tag a = test$class b

tag a = test+class b {}

---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end))
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end_self)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end)))

===============
attr-concise-hyphens
===============
a b=c -- y

a [b=c -- y]

---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (html_block
      (text))
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_group_close))
    (concise_open_tag_end)
    (element_end)))

===============
attr-escape-characters
===============
<div foo='\"hello\"'>
    Hello World!
</div>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (text)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
attr-escaped-dollar
===============
<span data-foo="\$name"></span>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
attr-grouped
===============
a [href="http://www.ebay.com"
  target="_blank"
  style="background-color: yellow"
    class="foo"]
  -- This is the body of the a tag
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_group_close))
    (concise_open_tag_end)
    (html_block
      (text))
    (element_end)))

===============
attr-grouped-2
===============
a [ href="http://www.ebay.com"
  target="_blank"
  style="background-color: yellow"
    class="foo" ]
  -- This is the body of the a tag
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_group_close))
    (concise_open_tag_end)
    (html_block
      (text))
    (element_end)))

===============
attr-grouped-3
===============
a [ href="http://www.ebay.com"
  target="_blank"
  style="background-color: yellow"
    class]
  -- This is the body of the a tag
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_group_close))
    (concise_open_tag_end)
    (html_block
      (text))
    (element_end)))

===============
attr-grouped-4
===============
a [ href=['foo']
  target="_blank"
  style="background-color: yellow"
    class]
  -- This is the body of the a tag
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_group_close))
    (concise_open_tag_end)
    (html_block
      (text))
    (element_end)))

===============
attr-grouped-bound
===============
div [foo:=bar]
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_bound_value
        (attr_bound_eq)
        (attr_value_expr))
      (attr_group_close))
    (concise_open_tag_end)
    (element_end)))

===============
attr-grouped-comma
===============
div [x, y=1, a:b]

---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_group_close))
    (concise_open_tag_end)
    (element_end)))

===============
attr-grouped-multiple
===============
a [ foo=bar ] target="_blank" [
  style="background-color: yellow"
    class]
  -- This is the body of the a tag
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_group_close))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_group_close))
    (concise_open_tag_end)
    (html_block
      (text))
    (element_end)))

===============
attr-grouped-no-whitespace
===============
div[a=1 b]
  span[c]

---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_group
      (attr_group_open)
      (attr_name)
      (attr_value
        (attr_eq)
        (attr_value_expr))
      (attr_name)
      (attr_group_close))
    (concise_open_tag_end)
    (element
      (tag_name
        (tag_name_fragment))
      (attr_group
        (attr_group_open)
        (attr_name)
        (attr_group_close))
      (concise_open_tag_end)
      (element_end))
    (element_end)))

===============
attr-inc-and-dec
===============
a foo=a++ bar=b--
a foo=++a bar=--b
---------------

(document
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end))
  (element
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (concise_open_tag_end)
    (element_end)))

===============
attr-inconsistent-commas
===============
<test a=123 b=456, c=789></test>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
attr-int-and-id
===============
<a data=123 data=abc></a>
---------------

(document
  (element
    (open_tag_start)
    (tag_name
      (tag_name_fragment))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (attr_name)
    (attr_value
      (attr_eq)
      (attr_value_expr))
    (open_tag_end)
    (close_tag
      (close_tag_start)
      (close_tag_name)
      (close_tag_end))
    (element_end)))

===============
attr-literal-false
===============
<div data=false></div>
---------------
